# meu-projeto-gstreamer

./: CMakeLists.txt  Makefile  README.md  conanfile.py  deb  main.cpp
